[gd_scene load_steps=35 format=2]

[ext_resource path="res://src/Game.gd" type="Script" id=1]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/LetterContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/impact/under_control.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/win_success_01.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/win_transition_01.wav" type="AudioStream" id=6]
[ext_resource path="res://src/utils/PlayerCamera.gd" type="Script" id=7]
[ext_resource path="res://src/HUD.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/images/paper.png" type="Texture" id=10]
[ext_resource path="res://src/utils/Fader.gd" type="Script" id=11]
[ext_resource path="res://src/utils/RandomAudioStreamPlayer.gd" type="Script" id=13]
[ext_resource path="res://assets/audio/typewriter_carriage_return_01.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/audio/typewriter_bell_01.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/audio/cat_meow_long_01.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/images/impact/control.png" type="Texture" id=19]
[ext_resource path="res://assets/images/impact/out.png" type="Texture" id=20]
[ext_resource path="res://assets/images/impact/of.png" type="Texture" id=21]
[ext_resource path="res://assets/audio/death_transition_01.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/audio/title_01.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/theme/ui_theme.tres" type="Theme" id=24]
[ext_resource path="res://assets/audio/death_breath_01.wav" type="AudioStream" id=25]
[ext_resource path="res://src/Level.tscn" type="PackedScene" id=26]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 6.5
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenLayer/DeathScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScreenLayer/DeathScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScreenLayer/DeathScreen/TitleContainer/out:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScreenLayer/DeathScreen/TitleContainer/of:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScreenLayer/DeathScreen/TitleContainer/control:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioSound1")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 22 )
} ],
"times": PoolRealArray( 0 )
}
tracks/6/type = "audio"
tracks/6/path = NodePath("AudioSound2")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 23 )
} ],
"times": PoolRealArray( 1 )
}
tracks/7/type = "audio"
tracks/7/path = NodePath("AudioSound3")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 23 )
} ],
"times": PoolRealArray( 1.6 )
}
tracks/8/type = "audio"
tracks/8/path = NodePath("AudioSound4")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 23 )
} ],
"times": PoolRealArray( 2.2 )
}
tracks/9/type = "value"
tracks/9/path = NodePath("ScreenLayer/DeathScreen/Buttons/RetryButton:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 4.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("ScreenLayer/DeathScreen/Buttons:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 4.4, 6.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "method"
tracks/11/path = NodePath("ScreenLayer/DeathScreen/Buttons/RetryButton")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 4.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("ScreenLayer/DeathScreen/LetterContainer:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 3.4, 5.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "audio"
tracks/13/path = NodePath("AudioSound5")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 25 )
} ],
"times": PoolRealArray( 3.4 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HUDLayer/HUD:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerContainer/Player:follow_target_path")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ NodePath("IntroContainer/IntroPath/IntroPathFollow"), NodePath("") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IntroContainer/IntroPath/IntroPathFollow:unit_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioSound1")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 18 )
} ],
"times": PoolRealArray( 0.5 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("HUDLayer/HUD:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("PlayerContainer/Player")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("LevelContainer/Level")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("PlayerContainer/Player/PlayerCamera:current")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("IntroCamera:current")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PlayerContainer/Player/PlayerCamera:offset")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("PlayerContainer/Player/PlayerCamera:offset_h")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("PlayerContainer/Player/PlayerCamera:offset_v")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("LevelContainer/Level/Goal:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 2, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.8, 0, 0 ), Color( 0, 0.8, 0, 0 ), Color( 0, 0.8, 0, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("PlayerContainer/Player:is_zoom")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath(".:state")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerContainer/Player:follow_target_path")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ NodePath("IntroContainer/IntroPath/IntroPathFollow") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("IntroContainer/IntroPath/IntroPathFollow:unit_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HUDLayer/HUD:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScreenLayer/DeathScreen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerContainer/Player/PlayerCamera:current")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("IntroCamera:current")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("PlayerContainer/Player/PlayerCamera")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "force_update_scroll"
} ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("PlayerContainer/Player/PlayerCamera")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset_smoothing"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("PlayerContainer/Player/PlayerCamera:offset")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("PlayerContainer/Player/PlayerCamera:offset_h")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("PlayerContainer/Player/PlayerCamera:offset_v")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("LevelContainer/Level/Goal:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.8, 0, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("ScreenLayer/WinScreen:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath(".:state")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "win"
length = 6.5
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenLayer/WinScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScreenLayer/WinScreen:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScreenLayer/WinScreen/Buttons/NextLevelButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.02 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScreenLayer/WinScreen/Buttons:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.02, 2.02 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("ScreenLayer/WinScreen/Buttons/NextLevelButton")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.02 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioSound5")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}
tracks/6/type = "value"
tracks/6/path = NodePath("ScreenLayer/WinScreen/TitleContainer/controlled:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ScreenLayer/WinScreen/TitleContainer/controlled:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( -0.02, 0.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.8, 0, 0 ), Color( 0, 0.8, 0, 0 ), Color( 0, 0.8, 0, 1 ) ]
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( -416.245, 0, 416.245, 0, -128, -64, -158.737, -278.672, 158.737, 278.672, 960, 540 )
}

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="InputEventAction" id=8]
action = "ui_accept"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="InputEventAction" id=11]
action = "ui_accept"

[sub_resource type="ShortCut" id=12]
shortcut = SubResource( 11 )

[node name="Game" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 1 )
anims/default = SubResource( 2 )
anims/intro = SubResource( 3 )
anims/reset = SubResource( 4 )
anims/win = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Fader" type="Tween" parent="."]
script = ExtResource( 11 )

[node name="AudioEffect1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
bus = "Effects"
script = ExtResource( 13 )

[node name="AudioEffect2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "Effects"
script = ExtResource( 13 )

[node name="AudioSound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Effects"
script = ExtResource( 13 )
pitch_scale_lower = 0.0
pitch_scale_upper = 0.0

[node name="AudioSound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
bus = "Effects"
script = ExtResource( 13 )
pitch_scale_lower = 0.0
pitch_scale_upper = 0.0

[node name="AudioSound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
bus = "Effects"
script = ExtResource( 13 )
pitch_scale_lower = 0.0
pitch_scale_upper = 0.0

[node name="AudioSound4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )
bus = "Effects"
script = ExtResource( 13 )
pitch_scale_lower = 0.0
pitch_scale_upper = 0.0

[node name="AudioSound5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Effects"
script = ExtResource( 13 )
pitch_scale_lower = 0.0
pitch_scale_upper = 0.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2( 2000, 2000 )

[node name="Background" type="Sprite" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
position = Vector2( 960, 540 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="IntroCamera" type="Camera2D" parent="."]
position = Vector2( 960, 540 )
current = true
editor_draw_screen = false

[node name="LevelContainer" type="Node2D" parent="."]
pause_mode = 1

[node name="Level" parent="LevelContainer" instance=ExtResource( 26 )]

[node name="IntroContainer" type="Node2D" parent="."]
pause_mode = 1

[node name="IntroPath" type="Path2D" parent="IntroContainer"]
curve = SubResource( 6 )

[node name="IntroPathFollow" type="PathFollow2D" parent="IntroContainer/IntroPath"]
position = Vector2( -128, -64 )
rotation = 0.00342824
rotate = false

[node name="PlayerContainer" type="Node2D" parent="."]
pause_mode = 1

[node name="Player" parent="PlayerContainer" instance=ExtResource( 2 )]
position = Vector2( -128, -64 )
follow_target_path = NodePath("IntroContainer/IntroPath/IntroPathFollow")

[node name="PlayerCamera" type="Camera2D" parent="PlayerContainer/Player"]
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3
editor_draw_drag_margin = true
script = ExtResource( 7 )

[node name="HUDLayer" type="CanvasLayer" parent="."]
layer = 40

[node name="HUD" parent="HUDLayer" instance=ExtResource( 9 )]

[node name="ScreenLayer" type="CanvasLayer" parent="."]
layer = 80

[node name="DeathScreen" type="MarginContainer" parent="ScreenLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="ScreenLayer/DeathScreen"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 7 )

[node name="TitleContainer" type="Node2D" parent="ScreenLayer/DeathScreen"]
position = Vector2( 960, 336 )

[node name="out" type="Sprite" parent="ScreenLayer/DeathScreen/TitleContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -332, 0 )
texture = ExtResource( 20 )

[node name="of" type="Sprite" parent="ScreenLayer/DeathScreen/TitleContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -124, 0 )
texture = ExtResource( 21 )

[node name="control" type="Sprite" parent="ScreenLayer/DeathScreen/TitleContainer"]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 212, 0 )
texture = ExtResource( 19 )

[node name="LetterContainer" parent="ScreenLayer/DeathScreen" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 960, 496 )
is_static = true

[node name="Buttons" type="VBoxContainer" parent="ScreenLayer/DeathScreen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 871.0
margin_right = 1048.0
margin_bottom = 1080.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="ScreenLayer/DeathScreen/Buttons"]
margin_right = 177.0
margin_bottom = 643.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="RetryButton" type="Button" parent="ScreenLayer/DeathScreen/Buttons"]
margin_top = 651.0
margin_right = 177.0
margin_bottom = 714.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 24 )
disabled = true
shortcut_in_tooltip = false
shortcut = SubResource( 9 )
text = "Retry"
flat = true

[node name="WinScreen" type="MarginContainer" parent="ScreenLayer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="ScreenLayer/WinScreen"]
modulate = Color( 0, 0, 0, 0.815686 )
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 10 )

[node name="TitleContainer" type="Node2D" parent="ScreenLayer/WinScreen"]
position = Vector2( 960, 336 )

[node name="controlled" type="Sprite" parent="ScreenLayer/WinScreen/TitleContainer"]
visible = false
modulate = Color( 0, 0.8, 0, 0 )
texture = ExtResource( 4 )

[node name="Buttons" type="VBoxContainer" parent="ScreenLayer/WinScreen"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 799.0
margin_right = 1121.0
margin_bottom = 1080.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="ScreenLayer/WinScreen/Buttons"]
margin_right = 322.0
margin_bottom = 643.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="NextLevelButton" type="Button" parent="ScreenLayer/WinScreen/Buttons"]
margin_top = 651.0
margin_right = 322.0
margin_bottom = 714.0
size_flags_horizontal = 4
size_flags_vertical = 2
theme = ExtResource( 24 )
disabled = true
shortcut_in_tooltip = false
shortcut = SubResource( 12 )
text = "Next Level"
flat = true

[connection signal="button_up" from="ScreenLayer/DeathScreen/Buttons/RetryButton" to="." method="_on_retry_button_up"]
[connection signal="button_up" from="ScreenLayer/WinScreen/Buttons/NextLevelButton" to="." method="_on_next_level_button_up"]
